--- a/css/main.css
+++ b/css/main.css
@@ -2,16 +2,38 @@
 
 *{
 	font-family: 'Open Sans', sans-serif;
-	font-weight: 400;
+	font-weight: 300;
 	font-size: 18px;
 }
 b,span,strong{font-size:inherit;}
 b,strong{font-weight: 700;}
 a,a:hover,a:focus,a:active{text-decoration: none;color: inherit;}
-h1,h2,h3,h4,h5,h6{margin-top: 0;font-weight: 700;}
+h1,h2,h3,h4,h5,h6{margin-top: 0;font-weight: 400;color:#02B4B6}
 
-.btn {}
-.btn.btn_line {}
+.btn {
+    border: solid 2px;
+    border-radius: 0;
+    font-size: 1em;
+    letter-spacing: 4px;
+    padding: 10px 40px;
+    text-transform: uppercase;
+    transition: all 150ms ease-out; 
+    background: #FFF;
+    border-color: #FFF;
+    color: #0cebeb;
+    transform:translateY(0px);
+}
+.btn:hover {
+    color: #02B4B6;
+    box-shadow: 10px 10px 40px 5px rgba(0,0,0,0.2);
+    transform:translateY(-3px);
+}
+.btn.btn_line {
+    background: transparent;
+    box-shadow: none;
+    border-color: #FFF;
+    color: #FFF;
+}
 
 .flex_center {
     display: flex;
@@ -58,7 +80,7 @@ header nav ul li.logo a{
     float: left;
 }
 header nav ul li.logo img{
-    height: 50px;
+    height: 40px;
     width: auto;
     display: block;
 }
@@ -84,47 +106,21 @@ header nav ul li a:hover{color: #FFF;}
 .contacto:hover img{
     transform: scale(1.1);
 }
-.contacto a span,
-.ubicanos a span{
-    position: absolute;
-    top: 50%;
-    left: calc(100% + 15px);
-    margin-top: -15.5px;
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 25px;
-    color: #02B4B6;
-    width: auto;
-    text-transform: uppercase;
-    transition: all 150ms ease-out;
-    transform-origin: -35px center;
-    transform: rotate(90deg);
-    opacity: 0
-}
 
 .contacto {
     left: initial;
     right: 15px;
 }
-.contacto a span{
-    transition: all 150ms ease-out;
-    right: calc(100% + 15px);
-    left: initial;
-    transform-origin: calc(100% + 35px) center;
-    transform: rotate(-90deg);
-}
-.ubicanos:hover a span{
-    transform: rotate(0deg);
-    opacity: 1
-}
-.contacto:hover a span{
-    transform: rotate(0deg);
-    opacity: 1
-}
 
-.slider{position: relative;}
-.slider:before{background: url(../img/separator_white.svg) no-repeat;display: block;position:absolute;z-index:2;bottom: 0;left: 0;width:100%;height: 50%;content: "";background-size: 101% auto;background-position: center top;}
-.slider:after{
+.slider,.separator_bottom,.gradiant,.separator_top{position: relative;overflow:hidden;}
+
+.separator_top:after{background: url(../img/separator_white_top.svg) no-repeat;display: block;position:absolute;z-index:2;top: -50px;left: 0;width:100%;height: 50%;content: "";background-size: 101% auto;background-position: center bottom;}
+.separator_top img{width:100%;height: auto}
+
+.separator_bottom:before{background: url(../img/separator_white.svg) no-repeat;display: block;position:absolute;z-index:2;bottom: -50px;left: 0;width:100%;height: 50%;content: "";background-size: 101% auto;background-position: center top;}
+.separator_bottom img{width:100%;height: auto}
+
+.gradiant:after{
 	background: #0cebeb;  /* fallback for old browsers */
 	background: -webkit-linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -139,8 +135,8 @@ header nav ul li a:hover{color: #FFF;}
     font-size: 2.2em;
     max-width: 500px;
 }
-.slider h1 span{display: block;font-weight: inherit;font-size:1.2em;margin-bottom: 15px;}
-.slider > .flex_center{position: absolute;width: 100%;height: 100%;z-index: 3}
+.slider h1 span{display: block;font-weight: inherit;font-size:1.2em;margin-bottom: 25px;}
+.slider > .flex_center{position: absolute;width: 100%;height: 100%;z-index: 3;top: 0;left: 0}
 .slider .text_center_slider{
     display: flex;
     flex-direction: row;
@@ -155,7 +151,43 @@ header nav ul li a:hover{color: #FFF;}
     flex: 0 1 auto;
     align-self: center;
 }
-.slider .text_center_slider .img{
-
+.slider .text_center_slider .cont_btn{
+    margin-top:35px;
 }
 
+.slider .arrow_down {
+    position: absolute;
+    bottom: 35px;
+    left: 50%;
+    margin-left: -65px;
+    z-index: 3;
+}
+.slider .arrow_down svg {
+    display: block;
+    width: 130px;
+    height: auto;
+}
+
+.flex_container_description {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    align-items: flex-start;
+}
+
+.flex_container_description .flex_item {
+    order: 0;
+    flex: 0 1 auto;
+    align-self: stretch;
+    width: 33.3333333333%;
+}
+
+.tech_item {text-align: center;padding: 15px; padding-bottom: 100px;}
+.tech_item img{width: 100%;height: auto;padding: 15px;max-width:200px}
+.tech_item figcaption{padding: 0 30px;}
+
+
+#easycharge{padding:100px 0}
+#easycharge h1{margin-bottom:30px}
