--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,22 @@ outline: 0!important;
 b,span,strong{font-size:inherit;}
 b,strong{font-weight: 700;}
 a,a:hover,a:focus,a:active{text-decoration: none;color: inherit;}
-h1,h2,h3,h4,h5,h6{margin-top: 0;font-weight: 400;color:#02B4B6;margin-bottom: 30px;}
+h1,h2,h3,h4,h5,h6{margin-top: 0;font-weight: 400;color:#02B4B6;margin-bottom: 30px;text-shadow: 0 0 10px rgba(2, 180, 182, 0.25);}
 
+input,
+textarea{
+    border: 0!important;
+    border-bottom: solid 2px #02b4b6!important;
+    border-radius: 0!important;
+    box-shadow: none!important;
+    height: auto;
+    font-size: 18px;
+    padding: 10px 15px;
+    background: transparent;
+}
 .btn {
     border: solid 2px;
-    border-radius: 0;
+    border-radius: 5px;
     font-size: 1em;
     letter-spacing: 4px;
     padding: 10px 40px;
@@ -25,6 +36,7 @@ h1,h2,h3,h4,h5,h6{margin-top: 0;font-weight: 400;color:#02B4B6;margin-bottom: 30
     border-color: #FFF;
     color: #0cebeb;
     transform:translateY(0px);
+    box-shadow: 0 0 10px 5px rgba(0,0,0,0.1);
 }
 .btn:hover {
     color: #02B4B6;
@@ -81,7 +93,13 @@ h1,h2,h3,h4,h5,h6{margin-top: 0;font-weight: 400;color:#02B4B6;margin-bottom: 30
 header,.bottom_links{position: fixed;top: 0;left: 0;z-index:99;width: 100%;}
 .bottom_links{top:initial;bottom: 0;}
 
-header nav {}
+header {
+    background: transparent;
+    transition: all 150ms ease-out;
+}
+header.stick{
+    background: #02B4B6; 
+}
 header nav ul{
     display: flex;
     flex-direction: row;
@@ -90,8 +108,11 @@ header nav ul{
     align-content: stretch;
     align-items: flex-start;
     width: 100%;
-    padding:30px;
+    padding:15px;
     margin:0;
+    transition: all 150ms ease-out;
+    z-index: 3;
+    position: relative;
 }
 header nav ul li{
     order: 0;
@@ -225,3 +246,63 @@ header nav ul li a:hover{color: #FFF;}
 .cont_map .map iframe{width: 100%;height:600px;}
 
 .flex_content_doble.publicidad img{width: 100%;display: block;height: auto;padding: 60px;margin: 0 auto;}
+
+.flex_formulario {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    align-items: stretch;
+    margin-top:200px;
+    box-shadow: 10px 10px 50px 5px rgba(0,0,0,0.2);
+}
+.flex_formulario .right{
+    order: 0;
+    flex: 1 1 auto;
+    align-self: auto;
+    background: #33354e;
+    padding:30px;
+    width: 500px;
+}
+.flex_formulario .left{
+    order: 0;
+    flex: 0 1 auto;
+    align-self: auto;
+    background: #FFF;
+    padding:30px;
+}
+footer h3{margin:0;margin-bottom:15px;}
+footer .form-group{margin-bottom: 0;}
+footer .form-group+.form-group{margin-top:30px;}
+footer input{height:49px!important}
+footer .btn{color:#33354E!important}
+footer input,
+footer textarea {
+    color: #FFF!important;
+    background: transparent!important;
+    font-size: 18px!important
+}
+
+footer ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #FFF!important;
+}
+footer ::-moz-placeholder { /* Firefox 19+ */
+  color: #FFF!important;
+}
+footer :-ms-input-placeholder { /* IE 10+ */
+  color: #FFF!important;
+}
+footer :-moz-placeholder { /* Firefox 18- */
+  color: #FFF!important;
+}
+
+ul.direccion,
+ul.social {padding: 0;margin: 0;}
+ul.direccion li,
+ul.social li{list-style:none;display: block;}
+ul.direccion li+li{margin-top: 20px;}
+ul.direccion li a{color: #02B4B6;}
+ul.direccion li b{display: block;color: #646464;}
+ul.social li {display: inline-block;}
+ul.social li svg{display: block;width: 30px;height: auto}
