--- a/css/main.css
+++ b/css/main.css
@@ -282,6 +282,7 @@ header nav ul li a:hover{color: #FFF;}
     background: #33354e;
     padding:30px;
     width: 600px;
+    position: relative;
 }
 .flex_formulario .left{
     order: 0;
@@ -357,16 +358,14 @@ ul.social li svg{display: block;width: 30px;height: auto}
 section#cargador{z-index: 4}
 section#encuentranos{z-index: 2}
 
-.contact_easycharge{overflow:visible!important;border-radius: 110px;height: 220px;background: url(../img/gallery/photo_2.jpg);background-size: cover;background-position: center;}
+.contact_easycharge{overflow:visible!important;border-radius: 110px;height: 220px;background: url(../img/back_slide.jpg);background-size: cover;background-position: top right;}
 .contact_easycharge .right{z-index: 4;width:280px;}
 .contact_easycharge .left{z-index: 4;}
 .contact_easycharge:after{overflow:visible!important;border-radius: 110px;}
 .contact_easycharge h2{color: #FFF;margin-bottom: 10px;}
 .contact_easycharge p{color: #FFF;}
 
-
-.rent_section .flex_container_description .flex_item{width:25%;}
-.rent_section .flex_container_description .number.logo_circulo{
+.number.logo_circulo{
     width: 80px;
     height: 80px;
     padding: 0;
@@ -378,7 +377,54 @@ section#encuentranos{z-index: 2}
     box-shadow: 0 0 80px 0px rgba(255, 255, 255, 0.32), -10px -10px 40px 0px rgba(2, 180, 182, 0.2), 14px 14px 120px -5px rgba(47, 55, 150, 0.67);
 }
 
+.rent_section .flex_container_description .flex_item{width:25%;}
+
 
 .cont_map {
     margin: 50px 0;
+}
+
+.messgmodal {position: absolute;top: 0;left: 0;width: 100%;height: 100%;z-index: 1;background: rgba(51, 53, 78, 0.9);display: none;}
+.messgmodal .flex{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    height: 100%;
+}
+.messgmodal .flex .flex_item{
+    order: 0;
+    flex: 0 1 auto;
+    align-self: center;
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  background-color: #FFF;
+
+  margin: 100px auto;
+  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
+  animation: sk-rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes sk-rotateplane {
+  0% { -webkit-transform: perspective(120px) }
+  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+}
+
+@keyframes sk-rotateplane {
+  0% { 
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg) 
+  } 50% { 
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg) 
+  } 100% { 
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+    -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
 }
