--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media (min-width: 1200px) {
+/* @media (min-width: 1200px) {
     #inicio .slider img{}
 }
 @media (max-width: 1200px) {
@@ -30,4 +30,4 @@
     .flex_container_description .flex_item{width: 50%;}
 }
 @media (min-width: 768px) {}
-@media (min-width: 480px) {}
+@media (min-width: 480px) {} */
