--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,8 @@
 }
 
 *{
-	font-family: 'OpenSansLight', sans-serif;
-	font-size: 18px;
+    font-family: 'OpenSansLight', sans-serif;
+    font-size: 18px;
 }
 *:focus {
 outline: 0!important;
@@ -47,17 +47,20 @@ textarea{
     letter-spacing: 4px;
     padding: 10px 40px;
     text-transform: uppercase;
+    -webkit-transition: all 150ms ease-out;
     transition: all 150ms ease-out; 
     background: #FFF;
     border-color: #FFF;
     color: #02B4B6;
-    transform:translateY(0px);
+    -webkit-transform:translateY(0px);
+            transform:translateY(0px);
     box-shadow: 0 0 10px 5px rgba(0,0,0,0.1);
 }
 .btn:hover {
     color: #00d6d6;
     box-shadow: 10px 10px 40px 5px rgba(0,0,0,0.2);
-    transform:translateY(-3px);
+    -webkit-transform:translateY(-3px);
+            transform:translateY(-3px);
 }
 .btn.btn_line {
     background: transparent;
@@ -67,34 +70,66 @@ textarea{
 }
 
 .flex_center {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .flex_item {
-    order: 0;
-    flex: 0 1 auto;
-    align-self: center;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    -ms-flex-item-align: center;
+        align-self: center;
 }
 
 .flex_content_doble{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-content: center;
-    align-items: stretch;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
     width: 100%;
 }
 .flex_content_doble .left,
 .flex_content_doble .right{
-    order: 0;
-    flex: 1 1 auto;
-    align-self: center;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    -ms-flex-item-align: center;
+        align-self: center;
     width: 50%;
     padding: 0 15px;
 }
@@ -105,42 +140,62 @@ textarea{
 .flex_content_doble .right{
     text-align: right;
 }
-
+.menu_mobile{display: none;}
 header,.bottom_links{position: fixed;top: 0;left: 0;z-index:99;width: 100%;}
 .bottom_links{top:initial;bottom: 0;}
 
 header {
     background: transparent;
+    -webkit-transition: all 150ms ease-out;
     transition: all 150ms ease-out;
 }
 header.stick{
     background: #33354e; 
 }
 header nav ul{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-content: stretch;
-    align-items: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     width: 100%;
     padding:15px;
     margin:0;
+    -webkit-transition: all 150ms ease-out;
     transition: all 150ms ease-out;
     z-index: 3;
     position: relative;
 }
 header nav ul li{
-    order: 0;
-    flex: 0 1 auto;
-    align-self: center;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    -ms-flex-item-align: center;
+        align-self: center;
     list-style:none;
 }
 header nav ul li.logo{
-    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
 }
 header nav ul li.logo a{
-	padding:0;
+    padding:0;
     float: left;
 }
 header nav ul li.logo img{
@@ -165,10 +220,12 @@ header nav ul li a:hover{color: #FFF;}
 .contacto a{display: block;position:relative;}
 .ubicanos a img,
 .contacto a img{display: block;width:50px;height: auto;
+    -webkit-transition: all 150ms ease-out;
     transition: all 150ms ease-out;}
 .ubicanos:hover img,
 .contacto:hover img{
-    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
 }
 
 .contacto {
@@ -185,10 +242,11 @@ header nav ul li a:hover{color: #FFF;}
 .separator_bottom img{width:100%;height: auto}
 
 .gradiant:after{
-	background: #0cebeb;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	display: block;position:absolute;z-index:1;top: 0;left: 0;width:100%;height: 100%;content: "";background-size: 100% auto;opacity: 0.8}
+    background: #0cebeb;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);  /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(left, #29ffc6, #20e3b2, #0cebeb);
+    background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    display: block;position:absolute;z-index:1;top: 0;left: 0;width:100%;height: 100%;content: "";background-size: 100% auto;opacity: 0.8;-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"}
 .slider .img_slider{width: 100%;height: auto;display: block;}
 .slider h1{
     width: 100%;
@@ -202,20 +260,36 @@ header nav ul li a:hover{color: #FFF;}
 .slider h1 span{display: block;font-family: inherit;font-size:1.2em;margin-bottom: 25px;}
 .slider > .flex_center{position: absolute;width: 100%;height: 100%;z-index: 3;top: 0;left: 0}
 .slider .text_center_slider{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-content: stretch;
-    align-items: stretch;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
     max-width: 1200px;
     padding: 0 15px;
 }
 .slider .text_center_slider .txt,
 .slider .text_center_slider .img{
-    order: 0;
-    flex: 0 1 auto;
-    align-self: center;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    -ms-flex-item-align: center;
+        align-self: center;
 }
 .slider .text_center_slider .cont_btn{
     margin-top:35px;
@@ -235,18 +309,34 @@ header nav ul li a:hover{color: #FFF;}
 }
 
 .flex_container_description {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: stretch;
-    align-items: flex-start;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 .flex_container_description .flex_item {
-    order: 0;
-    flex: 0 1 auto;
-    align-self: stretch;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    -ms-flex-item-align: stretch;
+        align-self: stretch;
     width: 33.3333333333%;
 }
 
@@ -257,7 +347,7 @@ header nav ul li a:hover{color: #FFF;}
 
 #easycharge{padding:100px 0}
 #easycharge .flex_content_doble{ /* padding:60px 0 */ }
-.logo_circulo {background:#FFF;padding: 60px;display: block;margin: 0 auto;text-align: center;float: none;width: 280px;height: 280px;box-shadow: 0 0 80px 0px rgba(255, 255, 255, 0.32), -30px -29px 80px 0px rgba(2, 180, 182, 0.3), 25px 20px 130px -5px rgba(47, 55, 150, 0.6);border-radius: 50%;transition: all 150ms ease-out;}
+.logo_circulo {background:#FFF;padding: 60px;display: block;margin: 0 auto;text-align: center;float: none;width: 280px;height: 280px;box-shadow: 0 0 80px 0px rgba(255, 255, 255, 0.32), -30px -29px 80px 0px rgba(2, 180, 182, 0.3), 25px 20px 130px -5px rgba(47, 55, 150, 0.6);border-radius: 50%;-webkit-transition: all 150ms ease-out;transition: all 150ms ease-out;}
 .logo_circulo img{width: auto;height: 100%;}
 .cont_map {}
 .cont_map .map{}
@@ -266,28 +356,49 @@ header nav ul li a:hover{color: #FFF;}
 .flex_content_doble.publicidad img{width: 100%;display: block;height: auto;padding: 60px;margin: 0 auto;}
 
 .flex_formulario {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-content: stretch;
-    align-items: stretch;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -ms-flex-line-pack: stretch;
+        align-content: stretch;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
     margin-top:200px;
     box-shadow: 10px 10px 50px 5px rgba(0,0,0,0.2);
 }
 .flex_formulario .right{
-    order: 0;
-    flex: 1 1 auto;
-    align-self: auto;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    -ms-flex-item-align: auto;
+        align-self: auto;
     background: #33354e;
     padding:30px;
     width: 600px;
     position: relative;
 }
 .flex_formulario .left{
-    order: 0;
-    flex: 0 1 auto;
-    align-self: auto;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    -ms-flex-item-align: auto;
+        align-self: auto;
     background: #FFF;
     padding:30px;
 }
@@ -342,17 +453,25 @@ ul.social li svg{display: block;width: 30px;height: auto}
 .gallery .flex_item img{
     display: block;
     border-radius: 5px;
+    -webkit-transition: all 250ms ease-in;
     transition: all 250ms ease-in;
-    filter: grayscale(100);
+    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="-77.74000000000001 71.52 7.22 0 0 21.259999999999998 -27.48 7.22 0 0 21.259999999999998 71.52 -91.78 0 0 0 0 0 1 0" /></filter></svg>#filter');
+    -webkit-filter: grayscale(100);
+            filter: grayscale(100);
     width: 100%;
     height: auto;
-    opacity: 0.3
+    opacity: 0.3;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)"
 }
 .gallery .flex_item img:hover{
     box-shadow: 0 0 80px 0px rgba(255, 255, 255, 0.32), -30px -29px 80px 0px rgba(2, 180, 182, 0.3), 25px 20px 130px -5px rgba(47, 55, 150, 0.6);
-    filter: grayscale(0);
-    transform: scale(1.1);
-    opacity: 1
+    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feColorMatrix type="matrix" color-interpolation-filters="sRGB" values="1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0" /></filter></svg>#filter');
+    -webkit-filter: grayscale(0);
+            filter: grayscale(0);
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"
 }
 
 section#cargador{z-index: 4}
@@ -386,18 +505,34 @@ section#encuentranos{z-index: 2}
 
 .messgmodal {position: absolute;top: 0;left: 0;width: 100%;height: 100%;z-index: 1;background: rgba(51, 53, 78, 0.9);display: none;}
 .messgmodal .flex{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 100%;
 }
 .messgmodal .flex .flex_item{
-    order: 0;
-    flex: 0 1 auto;
-    align-self: center;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    -ms-flex-item-align: center;
+        align-self: center;
 }
 
 .spinner {
