--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,20 @@ header nav ul li{
         align-self: center;
     list-style:none;
 }
+header nav ul li.submenu {
+    position: relative;
+}
+.submenu .submenu_{
+    position: absolute;
+    background: #3deacb;
+    padding: 5px;
+    border-radius: 5px;
+    top: 100%;
+    left: 0;
+    display: none;
+}
+.submenu:hover .submenu_{display: block;}
+.submenu .submenu_ a{display: block;}
 header nav ul li.logo{
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
@@ -203,7 +217,7 @@ header nav ul li.logo img{
     width: auto;
     display: block;
 }
-header nav ul li a{display:inline-block;color: #FFF;padding:0 15px;text-align:center;text-transform: uppercase;font-family: 'OpenSansLight';}
+header nav ul li a{display:inline-block;color: #FFF;padding:0 15px;text-align:center;text-transform: uppercase;font-family: 'OpenSansLight';height: 40px;line-height: 40px;}
 header nav ul li a:hover{color: #FFF;}
 
 .ubicanos ,
@@ -501,7 +515,7 @@ section#encuentranos{z-index: 2}
 }
 
 .rent_section .flex_container_description .flex_item{width:25%;}
-.show_section .flex_container_description.establecimientos .flex_item{width:20%;}
+/*.show_section .flex_container_description.establecimientos .flex_item{width:20%;}*/
 .show_section .flex_container_description.establecimientos .flex_item h2{font-size: 1.2em;margin-bottom: 10px;}
 
 
